@@ -11,7 +11,7 @@ static const char *swfdec_debug_level_names[] = {
 };
 
 //static int swfdec_debug_level = SWFDEC_LEVEL_ERROR;
-static int swfdec_debug_level = SWFDEC_LEVEL_LOG;
+static int swfdec_debug_level = SWFDEC_LEVEL_DEBUG;
 
 void
 swfdec_debug_log (int level, const char *file, const char *function,
