@@ -1,5 +1,5 @@
 
-noinst_PROGRAMS = display-shape render-fast test-pixbuf
+noinst_PROGRAMS = display-shape render-fast test-pixbuf dump
 
 display_shape_CFLAGS = $(SWF_CFLAGS) $(GTK_CFLAGS) $(LIBART_CFLAGS)
 display_shape_LDFLAGS = $(SWF_LIBS) $(GTK_LIBS) $(LIBART_LIBS)
@@ -9,4 +9,7 @@ render_fast_LDFLAGS = $(SWF_LIBS) $(LIBART_LIBS)
 
 test_pixbuf_CFLAGS = $(GTK_CFLAGS)
 test_pixbuf_LDFLAGS = $(GTK_LIBS)
+
+dump_CFLAGS = $(SWF_CFLAGS) $(LIBART_CFLAGS)
+dump_LDFLAGS = $(SWF_LIBS) $(LIBART_LIBS)
 
